fix(embed): higher z-index

--- a/packages/embed/src/styles/index.css
+++ b/packages/embed/src/styles/index.css
@@ -63,7 +63,3 @@
   --tw-duration: initial;
   --tw-ease: initial;
 }
-
-@utility z-top {
-  z-index: 9999;
-}
